fix scrollbar style

--- a/src/horizon.css
+++ b/src/horizon.css
@@ -77,23 +77,23 @@ h6 {
 */
 /* width */
 ::-webkit-scrollbar {
-  display: none;
-  height: 2px;
+  height: 5px;
+  width: 5px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #121212;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #232323;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #232323;
 }
 
 /*
